@@ -1,3 +1,7 @@
+2005-11-10 Borut Razem <borut.razem AT siol.net>
+
+	* links.html: reformatted to use style.css
+
 2005-11-09 Borut Razem <borut.razem AT siol.net>
 
 	* index.html: fixed doc request [ 1201748 ] Adding Maarten Brock's name to "who is
